Fix project display overflow on mobile landscape
On small to medium sized views, the project display cards now expand to full screen width.

--- a/src/css/ProjectDisplay.css
+++ b/src/css/ProjectDisplay.css
@@ -62,8 +62,10 @@
 }
 
 .project-display-floor.open {
-    left: -10%;
-    width: 120%;
+    --diff: calc(100vw - var(--content-width));
+    --half: calc(var(--diff) / 2);
+    left: calc(-1 * var(--half));
+    width: 100vw;
     background-color: var(--cerulean-1);
 }
 
