--- a/src/css/StripeCard.css
+++ b/src/css/StripeCard.css
@@ -13,7 +13,7 @@
     width: 15px;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 840px) {
     .left-stripe-card,
     .right-stripe-card {
         flex-grow: 1;
